api and delete angular 2 tutorial #17

--- a/catalog/web/angular2tutorial/app/heroes.component.html
+++ b/catalog/web/angular2tutorial/app/heroes.component.html
@@ -9,6 +9,7 @@
         (click)="onSelect(hero)">
         <span class="badge">{{hero.id}}</span>   
         <span>{{hero.name}}</span>
+        <button class="delete" (click)="delete(hero); $event.stopPropagation()">X</button>
       </li>
     </ul>
     <div *ngIf="selectedHero">
