--- a/catalog/web/angular2tutorial/app/dashboard.component.html
+++ b/catalog/web/angular2tutorial/app/dashboard.component.html
@@ -1,8 +1,9 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-    <div *ngFor="let hero of heroes" [routerLink]="['/detail', hero.id]" class="col-1-4"> <!--he two array items align with the path and :id token in the parameterized hero detail route definition we added to app.module.ts-->
+    <a *ngFor="let hero of heroes" [routerLink]="['/detail', hero.id]" class="col-1-4"> 
         <div class="module hero">
             <h4>{{hero.name}}</h4>
         </div>
-    </div>
+    </a>
 </div>
+<hero-search></hero-search>
