requirement before observable service testing angular 2 #5

--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -1,4 +1,9 @@
 <div>
     <h1>Requirements</h1>
-  
+    <ul>
+        <li *ngFor="let requirement of requirementsx ">
+            {{requirement.rq_id}}
+            {{requirement.rq_requirement}}            
+        </li>
+    </ul>
 </div>
