--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -1,11 +1,9 @@
-<div layout="row" layout-xs="column">
 
 
-
-      <md-list class="md-dense" layout="row" layout-xs="column">
+      <md-list class="md-dense">
       <md-list-item *ngFor="let requirement of requirementsx" flex>
 
-         <div layout="row" layout-xs="column" layout-align="center center">
+         <div layout="row"  >
            <div flex>
              {{requirement.rq_id}}
            </div> 
@@ -17,41 +15,3 @@
       </md-list-item>
 
     </md-list>
-
-</div>
-
-
-
-
-
-
-
-<div class="app-content">
-  <md-card>
-    <button md-button>FLAT</button>
-    <button md-raised-button>RAISED</button>
-  </md-card>
-  <md-card>
-    <button md-icon-button>
-      <md-icon class="md-24">favorite</md-icon>
-    </button>
-    <button md-fab>
-      <md-icon class="md-24">add</md-icon>
-    </button>
-    <button md-mini-fab>
-      <md-icon class="md-24">add</md-icon>
-    </button>
-  </md-card>
-  <md-card>
-    <button md-raised-button color="primary">PRIMARY</button>
-    <button md-raised-button  color="accent">ACCENT</button>
-    <button md-raised-button color="warn">WARN</button>
-  </md-card>
-  <md-card>
-    <button md-button disabled>OFF</button>
-    <button md-raised-button disabled>OFF</button>
-    <button md-mini-fab disabled><md-icon>check</md-icon></button>
-  </md-card>
-
-
-</div>
