--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -1,10 +1,9 @@
 
 
-    <div class="teste">
+    <div>
       <md-list-item *ngFor="let requirement of requirementsx" class="md-3-line md-long-text">
         <div class="md-list-item-text teste">
-          <h3>{{requirement.rq_id}}</h3>
-         
+          <h3>{{requirement.rq_id}}</h3>    
 	 <p>prog_prob: {{requirement.rq_prog_prob}} </p>
    <p>modality: {{requirement.rq_modality}} </p>
 	 <p>ml_type: {{requirement.rq_ml_type}} </p>
