--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -6,18 +6,8 @@
         (click)="onSelect(requirement)">
         <div class="md-list-item-text teste">
           <h3>{{requirement.rq_id}}</h3>    
-            <p>prog_prob: {{requirement.rq_prog_prob}} </p>
-            <p>modality: {{requirement.rq_modality}} </p>
-            <p>ml_type: {{requirement.rq_ml_type}} </p>
-            <p>ml_modification: {{requirement.rq_ml_modification}} </p>
-            <p>type_cat: {{requirement.rq_type_cat}} </p>
-            <p>theories: {{requirement.rq_theories}} </p>
-            <p>subcategory: {{requirement.rq_subcategory}} </p>
-            <p>requirement: {{requirement.rq_requirement}} </p>
-            <p>description: {{requirement.rq_description}} </p>
-            <p>cross_referencue: {{requirement.rq_cross_reference}} </p>
-            <p>variability: {{requirement.rq_variability}} </p>
-
+            <p><b>Requirement: </b> {{requirement.rq_requirement}} </p>
+              <button (click)="gotoDetail(requirement)">View Details</button>
   <p>Selected Value: <span class="radioValue">{{data.default}}</span></p>
   <md-radio-group  [(ngModel)]="data.default" [ngModelOptions]="{standalone: false}">
               <md-radio-button value="1" class="md-primary" >1</md-radio-button>
@@ -29,8 +19,35 @@
             </md-radio-group>
        <p> <md-input placeholder="Observações" style="width: 100%"></md-input> </p>
        
+
+
+
+
+
+
         </div>
-              <button (click)="gotoDetail(requirement)">View Details</button>
-      </md-list-item>    
+
+
+
+
+      </md-list-item>   
+
+
+
+          <div *ngIf="selectedRequirement">
+            <p>prog_prob: {{requirement.rq_prog_prob}} </p>
+            <p>modality: {{requirement.rq_modality}} </p>
+            <p>ml_type: {{requirement.rq_ml_type}} </p>
+            <p>ml_modification: {{requirement.rq_ml_modification}} </p>
+            <p>type_cat: {{requirement.rq_type_cat}} </p>
+            <p>theories: {{requirement.rq_theories}} </p>
+            <p>subcategory: {{requirement.rq_subcategory}} </p>            
+            <p>description: {{requirement.rq_description}} </p>
+            <p>cross_referencue: {{requirement.rq_cross_reference}} </p>
+            <p>variability: {{requirement.rq_variability}} </p>
+      <button (click)="gotoDetail()">View Details</button>
       </div>
+    </div>      
+
+     
 
