confirm dialog - no css

--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -27,7 +27,10 @@
 
         </div>
 
-
+<div>
+  <button md-raised-button (click)="openDialog(requirement)">Open Dialog</button>
+  <p>Result from dialog: {{ result }}</p>
+</div>
 
 
       </md-list-item>   
