Add Theory support list web

--- a/catalog/web/app/requirements/requirement-list.component.css
+++ b/catalog/web/app/requirements/requirement-list.component.css
@@ -1,9 +1,16 @@
 .rq_list{
-
       padding: 5px;
-
 }
 
-.accordion-heading{
-      text-decoration: none;
+
+.list_modal{
+      cursor: pointer;
+}
+
+.even { 
+      background-color: rgb(230,230,230); 
+}
+
+.odd { 
+      background-color: white; 
 }
