--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -2,19 +2,20 @@
 
     <div>
       <accordion      [closeOthers]="oneAtATime"> <!--Abrir fora e fechar fora do md-list para poder deixar apenas um aberto por vez-->
-      <md-list-item   *ngFor="let requirement of requirementsx" 
+      <md-list-item   *ngFor="let requirement of requirementsx; let odd=odd; let even=even" 
                       class="md-3-line md-long-text requirement"
                       [class.selected]="requirement === selectedRequirement" 
                       (click)="onSelect(requirement)">
-        <div class="md-list-item-text rq_list">
+
+        <div class="md-list-item-text rq_list" [ngClass]="{ odd: odd, even: even }">
             <h3>{{requirement.rq_id}}</h3>    
             <p><b>Requirement: </b> {{requirement.rq_requirement}} </p>
 
          
 
             
-            <accordion-group>
-              <div  accordion-heading>
+            <accordion-group #group [isOpen]="status.open">
+              <div accordion-heading>
                     Complete desciption of {{requirement.rq_id}}
                     <i  class="pull-right glyphicon"
                         [ngClass]="{'glyphicon-chevron-down': group?.isOpen, 'glyphicon-chevron-right': !group?.isOpen}"></i>
@@ -25,10 +26,8 @@
                         <p><b>Modalidade(s) de Origem:</b> {{selectedRequirement.rq_modality}} </p>
                         <p><b>Modificações para M-learning:</b> {{selectedRequirement.rq_ml_modification}} </p>
                         <p><b>Tipo de Categoria:</b> {{selectedRequirement.rq_type_cat}} </p>
-                      <b>Teorias Educacionais Envolvidas:</b>  
-                        <button md-button layout-padding layout="row"  layout-align="start end"  *ngFor="let theory of requirement.rq_theories" (click)="gotoDetail()" class="md-raised">{{theory}}</button>
-                        <a *ngFor="let theory of requirement.rq_theories" href="http://www.w3schools.com">{{theory}}</a>
-              
+                        <p><b>Teorias Educacionais Envolvidas:</b>
+                        <a class="list_modal" *ngFor="let theory of requirement.rq_theories; let i=index; let isLast=last" (click)="gotoDetail()">{{theory}}{{isLast ? '' : ', '}}</a></p>
                         <p><b>Subcategorias do Requisito:</b> {{selectedRequirement.rq_subcategory}} </p>            
                         <p><b>Descrição:</b> {{selectedRequirement.rq_description}} </p>
                         <p><b>Referência Cruzada (Requisitos):</b> {{selectedRequirement.rq_cross_reference}} </p>
