--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -1,6 +1,5 @@
 
-
-    <div>
+<div>
       <accordion      [closeOthers]="oneAtATime"> <!--Abrir fora e fechar fora do md-list para poder deixar apenas um aberto por vez-->
       <md-list-item   *ngFor="let requirement of requirementsx; let odd=odd; let even=even" 
                       class="md-3-line md-long-text requirement"
@@ -22,17 +21,17 @@
               </div>
             
                       <div *ngIf="selectedRequirement">
-                        <p><b>Problemas no Ensino de Programação:</b> {{selectedRequirement.rq_prog_prob}} </p>
-                        <p><b>Modalidade(s) de Origem:</b> {{selectedRequirement.rq_modality}} </p>
-                        <p><b>Modificações para M-learning:</b> {{selectedRequirement.rq_ml_modification}} </p>
-                        <p><b>Tipo de Categoria:</b> {{selectedRequirement.rq_type_cat}} </p>
-                        <p><b>Teorias Educacionais Envolvidas:</b>
+                        <p><b>Problemas in The Teaching of Programming:</b> {{selectedRequirement.rq_prog_prob}} </p>
+                        <p><b>Modality(ies) or Origem:</b> {{selectedRequirement.rq_modality}} </p>
+                        <p><b>Modifications for M-learning:</b> {{selectedRequirement.rq_ml_modification}} </p>
+                        <p><b>Type of Category:</b> {{selectedRequirement.rq_type_cat}} </p>
+                        <p><b>Educational Theory(ies) Envolved:</b>
                         <a class="list_modal" *ngFor="let theory of requirement.rq_theories; let i=index; let isLast=last"  (click)="onClick(theory,lgModal)">{{theory}}{{isLast ? '' : ', '}}</a></p>
-                        <p><b>Subcategorias do Requisito:</b> {{selectedRequirement.rq_subcategory}} </p>            
-                        <p><b>Descrição:</b> {{selectedRequirement.rq_description}} </p>
-                        <p><b>Referência Cruzada (Requisitos):</b> {{selectedRequirement.rq_cross_reference}} </p>
-                        <p><b>Tipo de Variabilidade:</b> {{selectedRequirement.rq_variability}} </p>
-                        <button (click)="gotoDetail(selectedRequirement)">View Details</button>
+                        <p><b>Requirement Subcategory(ies):</b> {{selectedRequirement.rq_subcategory}} </p>            
+                        <p><b>Description:</b> {{selectedRequirement.rq_description}} </p>
+                        <p><b>Cross Reference (Requeriments):</b> {{selectedRequirement.rq_cross_reference}} </p>
+                        <p><b>Type of Variability:</b> {{selectedRequirement.rq_variability}} </p>
+                       
                       </div>
 
             </accordion-group>
@@ -45,30 +44,31 @@
 
 
     <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title">{{title}}</h4>
-      </div>
-      <div class="modal-body">
-      <p><b>Theory Id: </b>{{theoriesx.et_id}}</p>
-      <p><b>Type: </b>{{theoriesx.et_type}}</p>
-      <p><b>Name: </b>{{theoriesx.et_name}}</p>
-      <p><b>Acroym: </b>{{theoriesx.et_acronym}}</p>
-      <p><b>Description: </b>{{theoriesx.et_description}}</p>
-      <p><b>Theoretician(s): </b>{{theoriesx.et_theoretician}}</p>
-      <p><b>Year of Creation: </b>{{theoriesx.et_year}}</p>
-      <p><b>Related Theory(ies): </b>{{theoriesx.et_relationship}}</p>
-      <p><b>Reference: </b>{{theoriesx.et_bibliography}}</p>                                                
-    
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+              <div class="modal-header">
+                    <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">{{title}}</h4>
+              </div>
+              <div class="modal-body">
+            
+                    <p><b>Theory Id: </b>{{theoriesx.et_id}}</p>
+                    <p><b>Type: </b>{{theoriesx.et_type}}</p>
+                    <p><b>Name: </b>{{theoriesx.et_name}}</p>
+                    <p><b>Acroym: </b>{{theoriesx.et_acronym}}</p>
+                    <p><b>Description: </b>{{theoriesx.et_description}}</p>
+                    <p><b>Theoretician(s): </b>{{theoriesx.et_theoretician}}</p>
+                    <p><b>Year of Creation: </b>{{theoriesx.et_year}}</p>
+                    <p><b>Related Theory(ies): </b>{{theoriesx.et_relationship}}</p>
+                    <p><b>Reference: </b>{{theoriesx.et_bibliography}}</p>                                                
+            
+              </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-    </div>      
+</div>      
 
   
