--- a/catalog/web/app/requirements/requirements-list.component.html
+++ b/catalog/web/app/requirements/requirements-list.component.html
@@ -21,12 +21,13 @@
               </div>
             
                       <div *ngIf="selectedRequirement">
-                        <p><b>Problemas in The Teaching of Programming:</b> {{selectedRequirement.rq_prog_prob}} </p>
+                        <p><b>Problems in The Teaching of Programming:</b>
+                        <a class="list_modal" *ngFor="let progproblem of requirement.rq_prog_prob; let i=index; let isLast=last"  (click)="onClickProgProblem(progproblem,ProgProblemModal)">{{progproblem}}{{isLast ? '' : ', '}}</a></p>                        
                         <p><b>Modality(ies) or Origem:</b> {{selectedRequirement.rq_modality}} </p>
                         <p><b>Modifications for M-learning:</b> {{selectedRequirement.rq_ml_modification}} </p>
                         <p><b>Type of Category:</b> {{selectedRequirement.rq_type_cat}} </p>
                         <p><b>Educational Theory(ies) Envolved:</b>
-                        <a class="list_modal" *ngFor="let theory of requirement.rq_theories; let i=index; let isLast=last"  (click)="onClick(theory,lgModal)">{{theory}}{{isLast ? '' : ', '}}</a></p>
+                        <a class="list_modal" *ngFor="let theory of requirement.rq_theories; let i=index; let isLast=last"  (click)="onClickTheory(theory,TheoryModal)">{{theory}}{{isLast ? '' : ', '}}</a></p>
                         <p><b>Requirement Subcategory(ies):</b> {{selectedRequirement.rq_subcategory}} </p>            
                         <p><b>Description:</b> {{selectedRequirement.rq_description}} </p>
                         <p><b>Cross Reference (Requeriments):</b> {{selectedRequirement.rq_cross_reference}} </p>
@@ -43,17 +44,18 @@
 
 
 
-    <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div bsModal #TheoryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
               <div class="modal-header">
-                    <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
+                    <button type="button" class="close" (click)="TheoryModal.hide()" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                     <h4 class="modal-title">{{title}}</h4>
               </div>
               <div class="modal-body">
             
+
                     <p><b>Theory Id: </b>{{theoriesx.et_id}}</p>
                     <p><b>Type: </b>{{theoriesx.et_type}}</p>
                     <p><b>Name: </b>{{theoriesx.et_name}}</p>
@@ -68,6 +70,28 @@
         </div>
       </div>
     </div>
+
+
+    <div bsModal #ProgProblemModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+              <div class="modal-header">
+                    <button type="button" class="close" (click)="ProgProblemModal.hide()" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">{{title}}</h4>
+              </div>
+              <div class="modal-body">
+
+                    <p><b>Programming Problem Id: </b>{{progproblmesx.pg_id}}</p>
+                    <p><b>Category: </b>{{progproblmesx.pg_category}}</p>
+                    <p><b>Description: </b>{{progproblmesx.pg_description}}</p>    
+                                              
+            
+              </div>
+        </div>
+      </div>
+    </div>    
 
 </div>      
 
