applying John's Papa style guide (web)

--- a/catalog/web/app/app.component.css
+++ b/catalog/web/app/app.component.css
@@ -71,3 +71,19 @@ md-sidenav-layout.m2app-dark {
 .app-progress {
   margin: 20px;
 }
+
+
+.wrapper{
+  display: flex;
+  flex-direction: column;            
+  height: 100vh;
+  overflow: hidden;
+}
+
+.header{
+  position: fixed !important;
+    display: flex;
+  flex-direction: column;            
+  height: 100vh;
+  overflow: hidden;
+}
