--- a/catalog/web/app/app.component.html
+++ b/catalog/web/app/app.component.html
@@ -1,38 +1,44 @@
-<md-sidenav-layout  fullscreen> <!--Ddeve ser fechado até onde o sidenav deve sobrepor-->
+
+
+<md-sidenav-layout> <!--Ddeve ser fechado até onde o sidenav deve sobrepor-->
       
         <md-sidenav #left mode="over" layout-padding>
 
-        <md-toolbar color="primary">
+            <md-toolbar color="primary">
+                <h3>Menu</h3>
+            </md-toolbar>        
 
-              
-            <h2>Menu</h2>
-        
-        </md-toolbar>        
-
-<md-nav-list> 
-<a md-list-item md-ink-ripple="#333333" routerLink="/requirement" routerLinkActive="active" (click)="left.toggle()">
- <md-icon md-list-icon>palette</md-icon>
-  <span md-line>Requirement</span> </a> 
-    </md-nav-list>           
-
+            <md-nav-list> 
+                <a md-list-item md-ink-ripple="#333333" routerLink="/requirement" routerLinkActive="active" (click)="left.toggle()">
+                <md-icon md-list-icon>palette</md-icon>
+                <span md-line>Requirement</span> </a> 
+            </md-nav-list>           
 
         </md-sidenav>
 
-        <md-toolbar color="primary">
 
-              <button md-icon-button class="app-icon-button" (click)="left.toggle()">
-                <md-icon>menu</md-icon>
-              </button>
 
-            Toolbar with Icon Buttons
-        
+
+        <md-toolbar color="primary" class="header" flex>
+              <div class="md-toolbar-tools">
+
+                <button md-icon-button class="app-icon-button" (click)="left.toggle()">
+                    <md-icon>menu</md-icon>
+                </button>
+
+                    Toolbar with Icon Buttons
+                </div>
         </md-toolbar>
 
 
 
-
         <div class="app-content">
-                    <router-outlet></router-outlet>
+        
+               <router-outlet></router-outlet>
+                       
         </div>
     
-    </md-sidenav-layout>
+</md-sidenav-layout>
+
+
+
