--- a/catalog/web/app/app.component.html
+++ b/catalog/web/app/app.component.html
@@ -12,7 +12,12 @@
                 <a md-list-item md-ink-ripple="#333333" routerLink="/requirement" routerLinkActive="active" (click)="left.toggle()">
                 <md-icon md-list-icon>palette</md-icon>
                 <span md-line>Requirement</span> </a> 
-            </md-nav-list>           
+            </md-nav-list> 
+            <md-nav-list> 
+                <a md-list-item md-ink-ripple="#333333" routerLink="/splasset" routerLinkActive="active" (click)="left.toggle()">
+                <md-icon md-list-icon>palette</md-icon>
+                <span md-line>SPL Asset</span> </a> 
+            </md-nav-list>                         
 
         </md-sidenav>
 
