--- a/catalog/web/app/app.component.html
+++ b/catalog/web/app/app.component.html
@@ -18,7 +18,11 @@
                 <md-icon md-list-icon>palette</md-icon>
                 <span md-line>SPL Asset</span> </a> 
             </md-nav-list>                         
-
+            <md-nav-list> 
+                <a md-list-item md-ink-ripple="#333333" routerLink="/lol" routerLinkActive="active" (click)="left.toggle()">
+                <md-icon md-list-icon>palette</md-icon>
+                <span md-line>LOL</span> </a> 
+            </md-nav-list>   
         </md-sidenav>
 
 
