--- a/catalog/web/app/splrequirements/requirement-list/requirement-list.component.css
+++ b/catalog/web/app/splrequirements/requirement-list/requirement-list.component.css
@@ -15,3 +15,29 @@
       background-color: white; 
 }
 
+
+/* Important part */
+.modal-dialog{
+    overflow-y: initial !important
+}
+                  .modal-body{
+                  height: 400px;
+                  overflow-y: auto;
+                  }
+
+
+        @media (max-width: 768px) {
+                  .modal-body{
+                  height: 200px;
+                  overflow-y: auto;
+                  }
+ 
+        }
+
+.modal{   
+    position: relative; 
+    top: 0;
+    right:0; 
+    left: auto; 
+    overflow: auto;
+    }
